encode/log.txt
g++ -std=c++11 -Wall -g -c Graph.cpp

            ^
Graph.cpp: In member function ‘void Graph::encode()’:
Graph.cpp:63:18: error: ‘struct Graph::Node’ has no member named ‘enc1’
   vertices[loc]->enc1=0;
                  ^

Graph.cpp:72:13: error: ‘struct Graph::Node’ has no member named ‘enc1’
         n2->enc1 = getBestNextEncoding(n->enc1);
             ^
Graph.cpp:72:43: error: ‘struct Graph::Node’ has no member named ‘enc1’
         n2->enc1 = getBestNextEncoding(n->enc1);

Graph.cpp:79:13: error: ‘struct Graph::Node’ has no member named ‘enc1’
         n3->enc1 = getBestNextEncoding(n->enc1);
             ^
Graph.cpp:79:43: error: ‘struct Graph::Node’ has no member named ‘enc1’
         n3->enc1 = getBestNextEncoding(n->enc1);
                                           ^
makefile:10: recipe for target 'Graph.o' failed
make: *** [Graph.o] Error 1
